--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -8,7 +8,7 @@
 .NavBar-Container{
     display: flex;
     justify-content: space-between;
-    padding: 5px 25px;
+    padding: 5px 15px;
     border-bottom: solid 1px gray;
 }
 
@@ -19,6 +19,7 @@
 .Modal-Icon-Container{
     display: flex;
     align-items: center;
+    margin-left: 7px;
 }
 
 .NavBar-Right-Container{
@@ -31,8 +32,9 @@
 }
 
 .NavBar-Right-Icon{
-    margin-right: 25px;
+    margin-right: 15px;
 }
+
 
 .NavBar-Right-Text{
     display: none;
@@ -113,6 +115,9 @@
     .NavBar-Icon-Left span {
         padding-right: 15px;
         padding-left: 2px;
+    }
+    .NavBar-Container{
+        padding: 5px 45px;
     }
 }
 
