--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,6 +1,6 @@
 .Logo{
-    width: 145px;
-    height: 50px;
+    width: 120px;
+    height: 35px;
     max-height: 100%;
     max-width: 100%;
 }
@@ -9,17 +9,20 @@
     display: flex;
     justify-content: space-between;
     padding: 5px 15px;
-    border-bottom: solid 1px gray;
 }
 
 .Modal-Icon, .NavBar-Right-Icon{
     margin-top: 0;
 }
 
-.Modal-Icon-Container{
+.Modal-Icon-Outer-Container{
     display: flex;
+}
+
+.Modal-Icon-Container{
     align-items: center;
     margin-left: 7px;
+    display: flex;
 }
 
 .NavBar-Right-Container{
@@ -31,10 +34,15 @@
     display: none;
 }
 
+
+
 .NavBar-Right-Icon{
     margin-right: 15px;
 }
 
+.Help-Icon{
+    display: none;
+}
 
 .NavBar-Right-Text{
     display: none;
@@ -103,6 +111,13 @@
     .NavBar-Right-Icon{
         margin-right: 5px;
     }
+    .Right-Icon-Container{
+        padding-left: 10px;
+        border-left: 1px solid lightgray;
+    }
+    .Help-Icon{
+        display: contents;
+    }
     
 }
 
@@ -119,5 +134,6 @@
     .NavBar-Container{
         padding: 5px 45px;
     }
+
 }
 
